# chatgpt

./: BUSINESS_PLAN.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: README.md
iou-app/: AndroidManifest.xml  Cargo.toml
iou-app/src/: lib.rs  main.rs
smol-iroh/: Cargo.toml
smol-iroh/src/: lib.rs
tests/: integration.rs
zkcred-app/: zkcred-app.apk
zkcred-cli/: Cargo.toml
zkcred-core/src/: lib.rs
zkcred-q/: .gitignore  LICENSE  Makefile
zkcred-q/.github/workflows/: ci.yml
zkcred-q/docs/: architecture.md  business-plan.md
zkcred-q/zkcred-cli/src/: main.rs
zkcred-q/zkcred-core/: Cargo.toml
