[package]
name = "iou-app"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = "1.3"
smol-iroh = { path = "../smol-iroh" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[lib]
name = "iou_app"
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.example.iouapp"
label = "IOU App"
